Adicionando JWT e tratamento de erros.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=PetShop-API
 
+# Server
+server.port=8080
+
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/petshop
 spring.datasource.username=postgres
@@ -13,5 +16,6 @@ spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data.sql
 spring.jpa.defer-datasource-initialization=true
 
-# Server
-server.port=8080
+# JWT
+jwt-secret=nxuPoejNlGFUOg4gZDaV7ghoOVsZbdLbXcwwbNe3yWY=
+jwt-expiration=86400000
