--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,10 @@ spring.jpa.defer-datasource-initialization=true
 # JWT
 jwt-secret=nxuPoejNlGFUOg4gZDaV7ghoOVsZbdLbXcwwbNe3yWY=
 jwt-expiration=86400000
+
+# Swagger
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.url=/v3/api-docs
+springdoc.cache.disabled=true
+server.forward-headers-strategy=FRAMEWORK
