--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Swagger -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -100,6 +107,7 @@
             <version>${mapstruct.version}</version>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
 
     <build>
