--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Micrometer -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
