--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,7 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.url=/v3/api-docs
 springdoc.cache.disabled=true
 server.forward-headers-strategy=FRAMEWORK
+
+# Actuator
+management.endpoints.web.exposure.include=health,metrics,info
+management.endpoint.health.show-details=always
